# gitea-ai-codereview

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
codereview/: ai.py  copilot.py
gitea/: client.py
utils/: config.py  logger.py  utils.py
