[tool.poetry]
name = "gitea-ai-codereview"
version = "0.1.0"
description = ""
authors = ["liukl <1138493417@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
requests = "^2.32.3"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
